src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.rustic-fit-container {
  object-fit: contain;
  width: 100%;
  height: 100%;
}

.rustic-files {
  display: flex;
  gap: 8px;
  flex-wrap: wrap;
}

.rustic-cursor-pointer {
  cursor: pointer;
}

.rustic-align-self-center {
  align-self: center;
}

